objects/Learning_Board_Member__c.object
<CustomObject>
    <fields>
        <fullName>Learning_Board_ID__c</fullName>
        <label>Learning Board ID</label>
        <referenceTo>Learning_Board__c</referenceTo>
        <relationshipLabel>Learning Board Members</relationshipLabel>
        <relationshipName>Learning_Board_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Board_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Board Member</label>
    <nameField>
        <displayFormat>LBM-{00000000}</displayFormat>
        <label>Learning Board Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Board Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>